<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Games</string>

    <!-- Main Menu -->
    <string name="Play">Play</string>
    <string name="CreateGame">Create Game</string>
    <string name="Rules">Rules</string>
    <string name="About">About</string>

    <!-- Rules Activity -->
    <string name="rulesActivityTitle">Rules</string>
    <string name="crazy_eight_game_rules_text">The basic game of Crazy Eights is played with a standard deck of 52 cards. Each player will be dealt five cards and the rest of the cards will be put into a draw pile which is placed face down on the playing table. After the cards are dealt, one card will be taken from and placed next to the draw pile face up. This will serve as the discard pile.
The game will start with player 1 and continue in a counterclockwise fashion around the table. During each turn a player will either need to play a card from their hand or select one card from the draw pile.
\n\nBasic Game Play:
\n1. If the top card is not an eight then a player must play a card that matches suit or the number of the last card in the discard pile.
\n2. An eight of any suit may be played at anytime during a players turn. If they choose to play an eight they must declare a suit.
\n3. If an eight is present on the top of the discard pile then a card of the declared suit or another eight can be played.
\n4. A draw will serve as a turn if a player cannot play a card.
\n5. If the first card turned up for the discard pile is an eight, then the suit that is on the eight is the suit that should be played next.\n6. Jokers can be played on any card, and any card can be played on a Joker.\n
\nThe first player to successfully get rid of all of their cards wins the game. If at any point in the game the draw pile is empty, all of the cards from the discard pile except for the top card will be re-shuffled to form a new draw pile.</string>

    <!-- About Activity -->
    <string name="aboutActivityTitle">About</string>
    <string name="about_text_gameboard">This 2 to 4 player card game application requires one Android tablet per game and one Android device of any kind per player, all of which should have WiFi capabilities. The tablet will serve as the game board, and each of the player’s devices will contain their hands of cards. Each player will connect to the tablet via Wifi.\n\nTo start a game, press Create Game on the tablet that you will be using as your game board. All of the players’ devices have a button that says Play on their Main Menu, which they should press to join a game. Once they choose to join a game, a list of nearby devices will display for the user to choose from. The tablet\'s name will appear in the top left corner of the tablet screen. Once a connection has been established between the tablet and a device, the player will be prompted to enter their name. Once all connected players have entered their name, the Start button will turn Yellow, indicating the game can begin.\n\nA preferences page is also available from the home screen. To get to this page, touch the wrench button that is displayed to the left of the game title on the Main Menu. This page will allow a player to set their language locale, change the number and difficulty of computer player, change connection type and modify the sound settings of the game.</string>

    <!-- Pause Menu Activity -->
    <string name="pauseGameTitle">Pause</string>

    <!-- Quit Application Activity -->
    <string name="exit_application">Are you sure you want to quit the application?</string>

    <!-- Quit Game Activity -->
    <string name="quit">Are you sure you want to quit the current game?</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_menu">Main Menu</string>

    <!-- Device List -->
    <string name="scanning">Scanning for Devices</string>
    <string name="no_devices_found">No devices found</string>
    <string name="title_device_list">Device List</string>

    <!-- Connect Screen Handheld -->
    <string name="waitingForGame">Waiting for game to begin…</string>

    <!-- Show Cards Activity -->
    <string name="Draw">Draw</string>

    <!-- Select Suit Activity -->
    <string name="selectsuit">Please select a suit</string>

    <!-- Pause Activity -->
    <string name="gamePaused">Paused</string>

    <!-- Disconnected Activity -->
    <string name="waiting">Waiting to reconnect…</string>

    <!-- Game Results -->
    <string name="winner">You Won!</string>
    <string name="loser">You Lost</string>

    <!-- Enter Name Activity -->
    <string name="enter_name">Please enter your name</string>
    <string name="ok">OK</string>
    <string name="enter_name_here">Enter your name here</string>
    <string name="default_name">Anonymous</string>

    <!-- Connect Devices -->
    <string name="start">Start</string>
    <string name="deviceName">Device Name: </string>
    <string name="connecting">Connecting…</string>

    <!-- Gameboard Activity -->
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>

    <!-- Disconnected Player -->
    <string name="reconnect">Reconnect</string>
    <string name="drop_player">Drop Player</string>
    <string name="player_lost">A player has been disconnected</string>

    <!-- Pause Activity -->
    <string name="resume">Resume</string>

    <!-- Preferences Activity -->
    <string name="preferencesActivityTitle">Preferences</string>
    <string name="Volume">Game Volume</string>
    <string name="soundEffects">Sound Effects</string>
    <string name="SpeechVolume">Speech Volume</string>
    <string name="NumComputers">Maximum Number of Computer Players</string>
    <string name="difficultyComputers">Difficulty of Computers</string>
    <string name="lang">Locale</string>
    <string name="Game">Game</string>
    <string name="connectionType">Connection Type</string>
    <string name="cheaterMode">Cheater Mode (see other player\'s cards)</string>

    <!-- Game Results Activity -->
    <string name="playerNWon">%s Wins!</string>
    <string name="congratulationMessage">Congratulations %s! You Won!</string>

    <string-array name="computer_difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="num_computer_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pass_option">Pass</string>
    <string name="bet_option">Bet</string>
    <string name="go_alone_option">Go Alone</string>
    <string name="bet_round_one_title">Tell the dealer to pick it up?</string>
    <string name="bet_round_two_title">Pass, or choose a suit and bet</string>
    <string name="Discard">Discard</string>
    <string name="play_again">Play Again</string>
    <string name="playAssistMode">Play Assist Mode</string>
    <string name="playAssistModeLong">Play Assist Mode (see a suggested card)</string>
    <string name="euchre_game_rules_text">The goal of Euchre is to win the most tricks in a round and to score points by doing so. Each player is on the same team as the player across from them. In Euchre only 9, 10, Jack, Queen, King, and Ace are dealt.
        \n
        \nHere are a few terms:
        \nTrick - each player has played one card, to win a trick you must play the highest card.
        \nRound - consists of 5 tricks, scores will be determined after each round.
        \nTrump Suit - it is the suit with the highest value, the lowest card of the trump suit is better than the highest card of any other suit.
        \n
        \nStart a Round by Betting:\nAt the start of each round, each player receives 5 cards then 1 card is flipped up in front of the dealer called the &quot;top card&quot;. Then each player gets a chance to bet that his or her team can score 3 or more tricks with the trump suit as the same suit as the top card. If anyone chooses to bet on the suit of the top card, then the dealer will pick up the top card, known as &quot;pick it up&quot;, and then chooses to discard any 1 of his cards (potentially choosing to discard the top card). If no one chooses to bet on the trump suit of the top card then the second round of betting begins. In the second round each player gets a chance to bet on their choice of any suit, except the suit of the top card. If no one bets and it is the dealer’s turn to choose a suit to bet on then the dealer will be forced to bet and choose a suit; this rule is known as &quot;stick the dealer.&quot;
        \n
        \nBetting Variations and Scoring:
        \nIf a player bets then his or her team is known as the &quot;makers&quot; and the other team is known as the &quot;defenders&quot; for the remainder of the round. It is also an option that the betting player can choose to &quot;go alone&quot;, this means that they will play without his or her partner and try to win at least 3 tricks.
        \n
        \nScoring:
        \n\tBetting team wins 3-4 tricks:\t\t\t\t\t\t\t\t\t\t+1
        \n\tBetting team wins 5 tricks:\t\t\t\t\t\t\t\t\t\t\t\t+2
        \n\tBidder goes alone and wins 3-4 tricks:\t\t\t+1
        \n\tBidder goes alone and wins 5 tricks:\t\t\t\t\t+4
        \n\tDefenders win 3-5 tricks:\t\t\t\t\t\t\t\t\t\t\t\t\t+2
        \n
        \nPlaying the rest of the round:
        \nAfter betting is done and the &quot;makers&quot; and &quot;defenders&quot; are determined then the player to the right of the dealer will start the first trick by playing a card from his or her hand. After each player has played a card the trick is over and the winner of the trick will play a card to start the next trick. This continues until all 5 tricks in the round are done then the scores will be assessed based on who won the tricks.
        \n
        \nWhich card wins a trick?
        \nWhen a suit is named trump, any card of that suit outranks any card of a non-trump suit. The highest-ranking card in euchre is the Jack of the trump suit (called \'The Right Bower\' or \'Right\') then the other Jack of the same color (the &quot;next&quot; suit), (called \'The Left Bower\' or \'Left\'). The cards are ranked, in descending order, J (of trump suit) J (same color as trump suit) A, K, Q, 10, and 9 of the trump suit. The remaining cards rank in the usual order (the jacks are not &quot;special&quot;) and the cards of those suits rank from high to low as A, K, Q, J, 10, and 9.
        \n
        \nSummary:
        \nAfter a round is over, you keep playing another round until one team reaches the score limit, which is defaulted to 10. If you still don’t quite understand try passing when it is your turn to bet and play using &quot;play assist mode&quot; found in the settings page. Enjoy playing Euchre.</string>

</resources>