<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wooden_top"
    android:gravity="center_vertical|center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingTop="25dp"
        android:paddingBottom="25dp" >
        <TextView
            style="@style/TitleFont"
            android:gravity="center"
            android:text="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wooden_top"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            style="GameButton"
            android:background="@drawable/button"
            android:id="@+id/btPlay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="75dip"
            android:layout_marginRight="75dip"
            android:padding="25dip"
            android:text="@string/CreateGame"
            android:textSize="70sp" >
        </Button>

        <Button
            style="GameButton"
            android:background="@drawable/button"
            android:id="@+id/btRules"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="85dip"
            android:layout_marginRight="85dip"
            android:padding="10dip"
            android:textSize="45sp"
            android:text="@string/Rules" >
        </Button>

        <Button
            android:id="@+id/btAbout"
            android:background="@drawable/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dip"
            android:layout_marginRight="85dip"
            android:padding="10dip"
            android:textSize="45sp"
            android:text="@string/About" >
        </Button>
    </LinearLayout>

</RelativeLayout>