<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_top"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_ref"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <TableLayout
        style="@style/GameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/infoTextViewPaddingTopBottom"
        android:layout_marginLeft="@dimen/infoTextViewPaddingLeftRight"
        android:layout_marginRight="@dimen/infoTextViewPaddingLeftRight"
        android:layout_marginTop="@dimen/infoTextViewPaddingTopBottom"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textViewVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/Volume"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <SeekBar
                android:id="@+id/volume"
                android:layout_width="265dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textViewSoundEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/soundEffects"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBoxSoundEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textViewSpeechVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/SpeechVolume"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkBoxSpeechVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textNumComputers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/NumComputers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinnerNumComputers"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/num_computer_array"
		        android:prompt="@string/NumComputers" />
            
        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textComputerDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/difficultyComputers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

           <Spinner
                android:id="@+id/difficultyOption"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/computer_difficulty_array"
		        android:prompt="@string/difficultyComputers" />
           
        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textViewLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/lang"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

 			<Spinner
                android:id="@+id/langOption"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/locale_array"
		        android:prompt="@string/lang" />

        </TableRow>

        <TableRow>

            <cs309.a1.shared.TextView
                android:id="@+id/textViewGameType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/Game"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />


            <Spinner
                android:id="@+id/gameOption"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/game_array"
		        android:prompt="@string/Game" />
            
        </TableRow>

        <cs309.a1.shared.Button
            android:id="@+id/ok"
            style="@style/GameButtonBlack"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:text="@string/ok" />
    </TableLayout>

</LinearLayout>