<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1" >

    <com.worthwhilegames.cardgames.shared.Button
        android:id="@+id/passOption"
        style="@style/GameButton"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_margin="5dip"
        android:layout_weight=".25"
        android:background="@drawable/statebutton"
        android:text="@string/pass_option"
        android:textColor="@color/buttontextcolor"
        android:textSize="20sp" />

    <com.worthwhilegames.cardgames.shared.Button
        android:id="@+id/betOption"
        style="@style/GameButton"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_margin="5dip"
        android:layout_weight=".25"
        android:background="@drawable/statebutton"
        android:text="@string/bet_option"
        android:textColor="@color/buttontextcolor"
        android:textSize="20sp" />

    <com.worthwhilegames.cardgames.shared.Button
        android:id="@+id/goAloneOption"
        style="@style/GameButton"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_margin="5dip"
        android:layout_weight=".25"
        android:background="@drawable/statebutton"
        android:text="@string/go_alone_option"
        android:textColor="@color/buttontextcolor"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/betTrumpSuit"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dip"
        android:layout_weight=".25"
        android:adjustViewBounds="true" />

</LinearLayout>